<?xml version="1.0"?>
<package format="2">

  <name>mtc_examples</name>
  <version>0.0.0</version>
  <description>The mtc_examples package</description>
  <author email="abhinand4as@gmail.com">Abhinand A S</author>
  <maintainer email="abhinand4as@gmail.com">Abhinand A S</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>rosparam_shortcuts</depend>
  <exec_depend version_gte="0.7.4">panda_moveit_config</exec_depend>

</package>
